fix spacing in about lists

--- a/src/less/base/typography.less
+++ b/src/less/base/typography.less
@@ -30,6 +30,7 @@ h3{
 p{
   line-height: 2.7rem;
   letter-spacing: 2;
+  margin-bottom: 2rem;
 }
 
 
