--- a/src/less/pages/about.less
+++ b/src/less/pages/about.less
@@ -2,6 +2,10 @@
 /*=========================================
 =            ABOUT PAGE STYLES            =
 =========================================*/
+.intro__list {
+  margin: 6rem auto;
+}
+
 .faq{
   h1{
     color: @color-title;
